# bad64

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
benches/: nop.rs
examples/: decode.rs  exhaustive.rs  id  pattern-match.rs  rand.rs  shitty-objdump.rs
src/: arrspec.rs  condition.rs  flageffect.rs  lib.rs  op.rs  operand.rs  operation.rs  reg.rs  shift.rs  sysreg.rs
tests/: dis.rs  test_cases.txt  testcases.rs
